# avail-srs

./: README.md
powersoftau/: .gitignore  COPYRIGHT  Cargo.toml  README.md  test.sh
powersoftau/src/: accumulator.rs  batched_accumulator.rs  keypair.rs  lib.rs  parameters.rs  utils.rs
powersoftau/src/bls12_381/: mod.rs
powersoftau/src/bn256/: mod.rs
powersoftau/src/small_bls12_381/: mod.rs
powersoftau/src/small_bn256/: mod.rs
srs/: .gitignore  Cargo.toml
srs/src/: main.rs
