[package]
name = "powersoftau"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"
edition = "2018"
default-run = "extract"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/matter-labs/powersoftau"
repository = "https://github.com/matter-labs/powersoftau"

[dependencies]
rand = "0.4.2"
rand_chacha = "0.3.1"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
blake2 = "0.8.1"
generic-array = "0.8.3"
typenum = "1.15.0"
byteorder = "1.4.3"
hex-literal = "0.3.3"
rust-crypto = "0.2"
hex = "0.4.3"
memmap = "0.7.0"
itertools = "0.10.3"
bellman = { git = 'https://github.com/matter-labs/bellman', tag = "0.2.0"}

[features]
