[package]
name = "srs"
version = "0.1.1"
authors = ["Anjan Roy <anjan.roy@polygon.technology>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2"}
dusk-bytes = "0.1"

ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
hex = "0.4.3"
rand = { version = "0.8", features = ["alloc", "small_rng"]}
# rand = "0.7.0"
merlin = "2.0.0"
num_cpus = "1.13.1"
